Fix misaligned table navigation chevrons

--- a/client/styles/core/components/table.scss
+++ b/client/styles/core/components/table.scss
@@ -33,6 +33,7 @@
       background-color: $button-color;
       color: $link-color;
       fill: $link-color;
+      display: flex;
 
       &:hover {
         color: $link-hover;
